--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
     <div id="container">
         <div id="header">
-            <h1>THE LIST OF HORRIBLE LANDLORDS</h1>
+            <h1>THE LIST OF 
+                HORRIBLE 
+                LANDLORDS</h1>
         </div>
         <div id="form-section">
             <h2>Submit Information</h2>
